--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Will In India
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: ![_config.yml]({{ site.baseurl }}/images/india.png)
 
 #
 # Flags below are optional
