--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Will In India
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Adventures from the other side of the world
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: ![_config.yml]({{ site.baseurl }}/images/india.png)
